Commit 35 - likes for posts added